Fix the spacing, add a toggle navigation

--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,21 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+.nav {
+  display: none;
+}
+
+.nav-check:checked ~ .nav {
+  display: block;
+}
+
+.nav-check {
+  /* Put the checkbox off the top of the screen */
+  position: absolute;
+  top: -3em;
+}
+
+.nav-check:checked ~ .nav-label {
+  background-color: grey;
+}
